--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
+  flutter_riverpod: ^2.5.1
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
