--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   intl: ^0.19.0
   flutter_riverpod: ^2.5.1
   collection: ^1.18.0
-
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  sqflite: ^2.3.3+1
+  shared_preferences: ^2.2.3
+  uuid: ^4.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
