--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   intl: ^0.19.0
   flutter_riverpod: ^2.5.1
-  collection: ^1.18.0
-  path_provider: ^2.1.3
-  path: ^1.9.0
-  sqflite: ^2.3.3+1
-  shared_preferences: ^2.2.3
   uuid: ^4.4.0
-  http: ^1.2.1
-
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  firebase_storage: ^12.0.1
+  cloud_firestore: ^5.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
