--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.1.0
   firebase_storage: ^12.0.1
   cloud_firestore: ^5.0.1
+  collection: ^1.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
