--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_storage: ^12.0.1
   cloud_firestore: ^5.0.1
   collection: ^1.18.0
+  share_plus: ^9.0.0
+  screenshot: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
