--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   collection: ^1.18.0
   share_plus: ^9.0.0
   screenshot: ^3.0.0
+  go_router: ^14.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
